Fixed Scrollbar for chrome

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,26 @@
   --color-red-dark: #ffbbbb;
 }
 
+::-webkit-scrollbar {
+  width: 4px;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+
+/* When hovering over the container, show the scrollbar */
+.box:hover::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 2px;
+}
+
+.box:hover::-webkit-scrollbar-thumb:hover,
+.box:hover::-webkit-scrollbar-thumb:active {
+  background-color: #555;
+}
+
 * {
   margin: 0;
   padding: 0;
